スタイルとカメラ設定の調整、音楽プレーヤーのテキストを更新

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <main>
     <div class="wrapper">
         <div class="copy">
-            <p>play your music</p>
+            <p>🎵play your music</p>
+            <p>🎵play your music</p>
         </div>
         <div class="container">
             <div class="text">
