スタイルの調整とマウスイベントの設定を追加。モデルの位置設定を修正し、モーダルの表示機能を改善。

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <!-- テキスト -->
                 <div class="modal__contents">
                     <div class="modal__textContents">
-                        <p class="modal__title">04版のテープ</p>
-                        <p class="modal__description">聞きなじみのない曲が入っている。不快だ。</p>
+                        <p class="modal__title"></p>
+                        <p class="modal__description"></p>
                     </div>
                     <div class="modal__buttons">
                         <button class="modal__play">play</button>
